<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".view.MenuPrincipalActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/colorYellow"
        android:backgroundTint="#FFC107" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_margin"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTempo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorWhite"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorLabel"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#FFEB3B"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgTempo"
                            android:layout_width="match_parent"
                            android:layout_height="75dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/shape"
                            android:scaleType="fitXY" />

                        <TextView
                            android:id="@+id/lblTempMaxMin"
                            style="@style/Rotulos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/lblFrase_atual"
                            style="@style/Rotulos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="@color/colorOrange" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/lblCondicao_atual"
                                style="@style/RotulosSimples"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:text="condicao" />

                            <TextView
                                android:id="@+id/lblTempo_atual"
                                style="@style/Rotulos"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCalcularPorML"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorWhite"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorLabel"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center"
                        android:padding="15dp"
                        android:src="@drawable/ic_icon_hand_beer" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            style="@style/Rotulos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="Calcular por ML" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="@color/colorOrange" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/RotulosSimples"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:text="@string/text_calc_ml" />

                        </RelativeLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCalcularQuantidade"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/cardViewCalcularPorML"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorWhite"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorLabel"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center"
                        android:padding="15dp"
                        android:src="@drawable/ic_icon_por_quant" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            style="@style/Rotulos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="Calcular por Quantidade" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="@color/colorOrange" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/RotulosSimples"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:text="@string/text_calc_quant" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewListaBebidas"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/cardViewCalcularPorML"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorWhite"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorLabel"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center"
                        android:padding="15dp"
                        android:src="@drawable/ic_icon_por_ml" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            style="@style/Rotulos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="Cadastro" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="@color/colorOrange" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/RotulosSimples"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:text="@string/text_cad_bebidas" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>

